<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DBF9DB"
    tools:context="agencia.viajes.agenciaActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avion.jpg"
            android:layout_width="120dp"
            android:layout_height="170dp"
            app:srcCompat="@drawable/viaje"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:text="@string/informacionviajes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="60dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="130dp"
                android:layout_marginVertical="10dp"
                android:text="@string/Medellin"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/viaje1"
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:layout_marginHorizontal="20dp"
                    app:srcCompat="@drawable/viaje2" />
            </androidx.appcompat.widget.LinearLayoutCompat>



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="380dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="0dp"
                    android:text="@string/text_viaje3"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="15sp" />



                <Button
                    android:id="@+id/button2precio"
                    android:layout_width="210dp"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="90dp"
                    android:layout_marginVertical="0dp"
                    android:backgroundTint="@color/green"
                    android:textColor="@color/white"
                    android:text="$250.000.000"
                    android:textSize="20dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>





        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</LinearLayout>