<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DBF9DB"
    tools:context="agencia.viajes.agenciaActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="170dp"
            app:srcCompat="@drawable/viaje"
            android:layout_marginHorizontal="20dp"/>

        <TextView
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:text="@string/Choose_your_trip"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="60dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/viaje1"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="20dp"
                    app:srcCompat="@drawable/viaje1" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:text="@string/Machu_Picchu"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />



                    <Button
                        android:id="@+id/buttoninfo2"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="11dp"
                        android:layout_marginVertical="0dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/informacion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/viaje2"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="20dp"
                    app:srcCompat="@drawable/viaje2" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:text="@string/Medellin"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/buttoninfo3"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="11dp"
                        android:layout_marginVertical="0dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/informacion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/viaje3"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="20dp"
                    app:srcCompat="@drawable/viaje3" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:text="@string/Rio_de_Janeiro"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/buttoninfo4"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="11dp"
                        android:layout_marginVertical="0dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/informacion"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/viaje4"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginHorizontal="20dp"
                    app:srcCompat="@drawable/viaje4" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="190dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        android:text="@string/piramides"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/buttoninfo5"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="11dp"
                        android:layout_marginVertical="0dp"
                        android:text="@string/informacion"
                        android:backgroundTint="@color/green"
                        android:textColor="@color/white" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</LinearLayout>